[gd_scene load_steps=19 format=3 uid="uid://bkt17j2t2gujw"]

[ext_resource type="Texture2D" uid="uid://bykr1e12a8spy" path="res://src/game/actors/player/warrior.png" id="1_a74gn"]
[ext_resource type="AnimationLibrary" uid="uid://d1wjy8llanui3" path="res://src/game/actors/player/animlib_warrior.tres" id="2_f55i4"]
[ext_resource type="Script" path="res://src/core/statemachine/state_machine.gd" id="2_i32bm"]
[ext_resource type="Script" path="res://src/game/actors/player/player_input.gd" id="2_jafpg"]
[ext_resource type="Script" path="res://src/game/actors/player/states/move.gd" id="4_81ai4"]
[ext_resource type="Script" path="res://src/game/actors/player/states/idle.gd" id="4_axnin"]
[ext_resource type="Script" path="res://src/core/actors/motion_direction_animation.gd" id="6_3asxm"]
[ext_resource type="Script" path="res://src/game/actors/player/states/attack.gd" id="6_n4wsn"]
[ext_resource type="Script" path="res://src/core/actors/actor_motion.gd" id="7_l23td"]
[ext_resource type="Script" path="res://src/core/statemachine/state.gd" id="10_nos0m"]
[ext_resource type="Script" path="res://src/core/actors/hurtbox.gd" id="10_psy01"]
[ext_resource type="Script" path="res://src/core/actors/hitbox.gd" id="11_7igt0"]
[ext_resource type="Script" path="res://src/core/actors/knockback.gd" id="12_sb0s8"]

[sub_resource type="CircleShape2D" id="CircleShape2D_5v3fb"]
radius = 6.0

[sub_resource type="Animation" id="Animation_susgg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Hitbox:active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hitbox/CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-3, 1.88231e-05)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Hitbox/CollisionShape2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-1.57079]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s482b"]
_data = {
"RESET": SubResource("Animation_susgg")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_wgk2m"]
radius = 5.0
height = 28.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c58g1"]
size = Vector2(50, 25.75)

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
motion_mode = 1

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -16)
texture = ExtResource("1_a74gn")
hframes = 8
vframes = 17
frame = 40

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -3)
shape = SubResource("CircleShape2D_5v3fb")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_s482b"),
"animlib_warrior": ExtResource("2_f55i4")
}

[node name="ActorMotion" type="Node" parent="."]
script = ExtResource("7_l23td")

[node name="PlayerInput" type="Node" parent="."]
script = ExtResource("2_jafpg")

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("2_i32bm")

[node name="Idle" type="Node" parent="StateMachine" node_paths=PackedStringArray("player_input", "actor_motion")]
script = ExtResource("4_axnin")
player_input = NodePath("../../PlayerInput")
actor_motion = NodePath("../../ActorMotion")

[node name="MotionDirectionAnimation" type="Node" parent="StateMachine/Idle" node_paths=PackedStringArray("motion", "anim_player")]
script = ExtResource("6_3asxm")
motion = NodePath("../../../ActorMotion")
anim_player = NodePath("../../../AnimationPlayer")
anim_north = &"animlib_warrior/idle_north"
anim_east = &"animlib_warrior/idle_east"
anim_south = &"animlib_warrior/idle_south"
anim_west = &"animlib_warrior/idle_west"

[node name="Move" type="Node" parent="StateMachine" node_paths=PackedStringArray("player_input", "actor_motion")]
script = ExtResource("4_81ai4")
player_input = NodePath("../../PlayerInput")
actor_motion = NodePath("../../ActorMotion")

[node name="MotionDirectionAnimation" type="Node" parent="StateMachine/Move" node_paths=PackedStringArray("motion", "anim_player")]
script = ExtResource("6_3asxm")
motion = NodePath("../../../ActorMotion")
anim_player = NodePath("../../../AnimationPlayer")
anim_north = &"animlib_warrior/move_north"
anim_east = &"animlib_warrior/move_east"
anim_south = &"animlib_warrior/move_south"
anim_west = &"animlib_warrior/move_west"

[node name="Attack" type="Node" parent="StateMachine" node_paths=PackedStringArray("player_input", "actor_motion")]
script = ExtResource("6_n4wsn")
player_input = NodePath("../../PlayerInput")
actor_motion = NodePath("../../ActorMotion")

[node name="MotionDirectionAnimation" type="Node" parent="StateMachine/Attack" node_paths=PackedStringArray("motion", "anim_player")]
script = ExtResource("6_3asxm")
motion = NodePath("../../../ActorMotion")
anim_player = NodePath("../../../AnimationPlayer")
anim_north = &"animlib_warrior/attack_north"
anim_east = &"animlib_warrior/attack_east"
anim_south = &"animlib_warrior/attack_south"
anim_west = &"animlib_warrior/attack_west"

[node name="Knockback" type="Node" parent="StateMachine"]
script = ExtResource("10_nos0m")

[node name="Hurtbox" type="Area2D" parent="."]
visible = false
script = ExtResource("10_psy01")
faction = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, -16)
shape = SubResource("CapsuleShape2D_wgk2m")
debug_color = Color(1, 1, 0, 0.419608)

[node name="Hitbox" type="Area2D" parent="."]
rotation = -1.57079
collision_layer = 4
collision_mask = 0
monitoring = false
monitorable = false
script = ExtResource("11_7igt0")
faction = 1
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(-3, 1.88231e-05)
rotation = -1.57079
shape = SubResource("RectangleShape2D_c58g1")
debug_color = Color(0.7, 0, 0, 0.419608)

[node name="Knockback" type="Node" parent="." node_paths=PackedStringArray("hurtbox", "actor_motion", "motion_direction_animation", "state_machine")]
script = ExtResource("12_sb0s8")
hurtbox = NodePath("../Hurtbox")
actor_motion = NodePath("../ActorMotion")
motion_direction_animation = NodePath("MotionDirectionAnimation")
state_machine = NodePath("../StateMachine")
knockback_state = &"Knockback"
resume_state = &"Idle"

[node name="MotionDirectionAnimation" type="Node" parent="Knockback" node_paths=PackedStringArray("motion", "anim_player")]
script = ExtResource("6_3asxm")
motion = NodePath("../../ActorMotion")
anim_player = NodePath("../../AnimationPlayer")
anim_north = &"animlib_warrior/hurt_south"
anim_east = &"animlib_warrior/hurt_west"
anim_south = &"animlib_warrior/hurt_north"
anim_west = &"animlib_warrior/hurt_east"
